--- a/web/hotfire/index.html
+++ b/web/hotfire/index.html
@@ -2,6 +2,8 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="fa/all.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </head>
     <body style="margin: 0;">
         <div style="position: relative; margin: 0;">
@@ -29,8 +31,8 @@
                 </div>
             </span>
         </div>
-    </body>
+        <div id="servoState">
 
-    <!-- Load script at the end -->
-    <script type="text/javascript" src="script.js"></script>
+        </div>
+    </body>
 </html>
